--- a/Books_reviews_analysis.ipynb
+++ b/Books_reviews_analysis.ipynb
@@ -6,21 +6,8 @@
         "id": "LnZwseeTJqvO"
       },
       "source": [
-        "# Which Books Do You Like? Analyzing Books’ Reviews to Predict What Readers Like\n",
-        "\n",
-        "Nowadays, data has become an important asset to\n",
-        "have for businesses to thrive since whatever decisions have to\n",
-        "be made can be supported by the insights gotten from the data,\n",
-        "such is the case for the publishing and editorial businesses. In\n",
-        "this project we propose the development of a tool to aid in one of\n",
-        "the tasks developed by editors which is the choosing of books to\n",
-        "publish. The development of this tool is based on the analysis of\n",
-        "an Amazon reviews dataset, where the reviews are first separated\n",
-        "by category and year to identify the most repeated words, then,\n",
-        "these most repeated words are converted to embeddings and\n",
-        "given as input to an architecture which will be trained to give\n",
-        "as output a prediction of what users might like the most or the\n",
-        "least in a book."
+        "# Books' reviews analysis\n",
+        "\n"
       ]
     },
     {
@@ -31,7 +18,8 @@
       "source": [
         "Import data from the Data Analytics folder located in Drive. This data can be found here:\n",
         "M. Bekheet, “Amazon Books Reviews,” 2022. [Online]. Available:\n",
-        "https://www.kaggle.com/datasets/mohamedbakhet/amazon-books-reviews"
+        "https://www.kaggle.com/datasets/mohamedbakhet/amazon-books-reviews\n",
+        "Please add the downloaded .csv files to a folder called data"
       ]
     },
     {
